--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/corona"
+        android:icon="@drawable/corona"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/corona"
         android:supportsRtl="true"
@@ -17,7 +17,6 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".TestActivity"/>
     </application>
 
 </manifest>
