--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,23 +2,28 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.coronanews">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/corona"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/corona"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SearchActivity"/>
+        <activity android:name=".SearchActivity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".CustomChannelActivity"
-            android:theme="@style/dialogStyle"/>
+            android:theme="@style/dialogStyle"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
