--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         <activity android:name=".CustomChannelActivity"
             android:theme="@style/dialogStyle"
             android:screenOrientation="portrait"/>
+        <activity android:name=".NewsSinglePageActivity"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTask"/>
     </application>
 
 </manifest>
