--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,7 @@
             android:screenOrientation="portrait"
             android:launchMode="singleTask"/>
         <activity android:name=".NewsSearchActivity"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTask"/>
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
