--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
             android:launchMode="singleTask"/>
         <activity android:name=".NewsSearchActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".NewsSharePageActivity"
+            android:theme="@style/dialogStyle"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
