--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
         <activity android:name=".NewsSharePageActivity"
             android:theme="@style/dialogStyle"
             android:screenOrientation="portrait"/>
+        <activity android:name=".HistoryActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
