修改了包名，添加应用说明

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.coronanews">
+    package="com.java.ChenYuanYong">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <application
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".MainActivity"
+        <activity android:name="com.java.ChenYuanYong.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,20 +19,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SearchActivity"
+        <activity android:name="com.java.ChenYuanYong.SearchActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name=".CustomChannelActivity"
+        <activity android:name="com.java.ChenYuanYong.CustomChannelActivity"
             android:theme="@style/dialogStyle"
             android:screenOrientation="portrait"/>
-        <activity android:name=".NewsSinglePageActivity"
+        <activity android:name="com.java.ChenYuanYong.NewsSinglePageActivity"
             android:screenOrientation="portrait"
             android:launchMode="singleTask"/>
-        <activity android:name=".NewsSearchActivity"
+        <activity android:name="com.java.ChenYuanYong.NewsSearchActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name=".NewsSharePageActivity"
+        <activity android:name="com.java.ChenYuanYong.NewsSharePageActivity"
             android:theme="@style/dialogStyle"
             android:screenOrientation="portrait"/>
-        <activity android:name=".HistoryActivity"
+        <activity android:name="com.java.ChenYuanYong.HistoryActivity"
             android:screenOrientation="portrait"/>
     </application>
 
