--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
             android:screenOrientation="portrait"/>
         <activity android:name="com.java.ChenYuanYong.HistoryActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".ScholarSinglePage"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTask"/>
     </application>
 
 </manifest>
