--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-<<<<<<< HEAD
-        <activity android:name=".EntityDetailsActivity"></activity>
-        <activity
-            android:name=".MainActivity"
-=======
+        <activity android:name="com.java.ChenYuanYong.EntityDetailsActivity"></activity>
         <activity android:name="com.java.ChenYuanYong.MainActivity"
->>>>>>> 4c46d73f81805ca4a43be061a0213742c54df9d3
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,19 +21,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<<<<<<< HEAD
-        <activity
-            android:name=".SearchActivity"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".CustomChannelActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/dialogStyle" />
-=======
         <activity android:name="com.java.ChenYuanYong.SearchActivity"
             android:screenOrientation="portrait"/>
         <activity android:name="com.java.ChenYuanYong.CustomChannelActivity"
@@ -57,7 +39,6 @@
         <activity android:name=".ScholarSinglePage"
             android:screenOrientation="portrait"
             android:launchMode="singleTask"/>
->>>>>>> 4c46d73f81805ca4a43be061a0213742c54df9d3
     </application>
 
 </manifest>
